Implement vectorised SIMD filter